<resources>
    <string name="app_name">EstudioFotografico_Android</string>

    <string name="cajaUsuario">Correo electrónico</string>
    <string name="cajaContraseña">Contraseña</string>
    <string name="btnAcceder">Acceder</string>
    <string name="btnRegistrarse">¿No tienes cuenta?</string>
    <string name="btnRegistrarse2">Presiona aquí para registrarte</string>

    <string name="txtRegistrarse">Registrarse</string>
    <string name="cajaNombre">Nombre</string>
    <string name="cajaApellido">Apellido</string>
    <string name="cajaContraseña2">Repite contraseña</string>
    <string name="btnCrear">Crear cuenta</string>

    <string name="textView_menu">Selecciona una opción</string>
    <string name="btn_altas">Agregar</string>
    <string name="btn_bajas">Eliminar</string>
    <string name="btn_cambios">Modificar</string>
    <string name="btn_consultas">Consultar</string>

    <string name="txt_altas">Agregar fotógrafo</string>
    <string name="txt_bajas">Eliminar fotógrafo</string>
    <string name="txt_cambios">Modificar fotógrafo</string>
    <string name="txt_consultas">Consultar fotógrafo</string>

    <string name="caja_id">Id</string>
    <string name="caja_nombre">Nombre</string>
    <string name="caja_apellido">Apellido</string>
    <string name="caja_fecha">Fecha nac.</string>
    <string name="caja_telefono">Teléfono</string>
    <string name="caja_email">Email</string>

    <string name="btn_agregar">Agregar</string>
    <string name="btn_borrar">Borrar</string>
    <string name="btn_eliminar">Eliminar</string>
    <string name="btn_buscar">Buscar</string>
    <string name="btn_modificar">Modificar</string>


    <string name="cajaEntrada">Ingresa para búscar</string>
    <string name="textView_titulo">ABCC Fotógrafos</string>


</resources>