<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityBajas">

    <TextView
        android:id="@+id/txt_bajas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="52dp"
        android:hint="@string/txt_bajas"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/caja_id_bajas"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/caja_id"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_bajas" />

    <EditText
        android:id="@+id/caja_nombre_bajas"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/caja_nombre"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_id_bajas" />

    <EditText
        android:id="@+id/caja_apellido_bajas"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/caja_apellido"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_nombre_bajas" />

    <EditText
        android:id="@+id/caja_fecha_bajas"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/caja_fecha"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_apellido_bajas" />

    <EditText
        android:id="@+id/caja_telefono_bajas"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/caja_telefono"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_fecha_bajas" />

    <EditText
        android:id="@+id/caja_email_bajas"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/caja_email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_telefono_bajas" />

    <Button
        android:id="@+id/btn_eliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_eliminar"
        app:layout_constraintStart_toEndOf="@+id/btn_buscar"
        app:layout_constraintTop_toBottomOf="@+id/caja_email_bajas" />

    <Button
        android:id="@+id/btn_borrar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="56dp"
        android:text="@string/btn_borrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_email_bajas" />

    <Button
        android:id="@+id/btn_buscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_buscar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_email_bajas" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_bajas"
        android:layout_width="274dp"
        android:layout_height="111dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_borrar1" />

</androidx.constraintlayout.widget.ConstraintLayout>