<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityCambios">

    <TextView
        android:id="@+id/txt_cambios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="44dp"
        android:hint="@string/txt_cambios"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/caja_id_cambios"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/caja_id"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/caja_nombre_cambios"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_cambios" />

    <EditText
        android:id="@+id/caja_nombre_cambios"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/caja_nombre"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_id_cambios" />

    <EditText
        android:id="@+id/caja_apellido_cambios"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/caja_apellido"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_nombre_cambios" />

    <EditText
        android:id="@+id/caja_fecha_cambios"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/caja_fecha"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_apellido_cambios" />

    <EditText
        android:id="@+id/caja_telefono_cambios"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/caja_telefono"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_fecha_cambios" />

    <EditText
        android:id="@+id/caja_email_cambios"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/caja_email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_telefono_cambios" />

    <Button
        android:id="@+id/btn_borrar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="4dp"
        android:text="@string/btn_borrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_modificar" />

    <Button
        android:id="@+id/btn_buscar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/btn_buscar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_email_cambios" />

    <Button
        android:id="@+id/btn_modificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="16dp"
        android:text="@string/btn_modificar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_email_cambios" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_cambios"
        android:layout_width="274dp"
        android:layout_height="111dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_borrar2" />

</androidx.constraintlayout.widget.ConstraintLayout>