<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityMenu">

    <TextView
        android:id="@+id/textView_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="72dp"
        android:hint="@string/textView_menu"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_altas"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="48dp"
        android:text="@string/btn_altas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_menu" />

    <Button
        android:id="@+id/btn_bajas"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/btn_bajas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_altas" />

    <Button
        android:id="@+id/btn_cambios"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/btn_cambios"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_bajas" />

    <Button
        android:id="@+id/btn_consultas"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/btn_consultas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cambios" />

</androidx.constraintlayout.widget.ConstraintLayout>