<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/txt_usuario"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="280dp"
        android:ems="10"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:background="@drawable/custom_input"
        android:hint="@string/cajaUsuario"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_contraseña"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:background="@drawable/custom_input"
        android:hint="@string/cajaContraseña"
        android:inputType="textPassword"
        
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_usuario" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_acceder"
        android:layout_width="130dp"
        android:layout_height="54dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#3164f4"
        android:onClick="abrirMenu"
        android:text="@string/btnAcceder"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_contraseña" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="64dp"
        android:text="@string/btnRegistrarse"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_acceder" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="8dp"
        android:onClick="abrirRegistro"
        android:text="@string/btnRegistrarse2"
        android:textColor="#2196F3"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>