<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityConsultas">

    <TextView
        android:id="@+id/txt_consultas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="48dp"
        android:hint="@string/txt_consultas"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/caja_id_consultas"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/caja_id"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/caja_nombre_cambios"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_consultas" />

    <EditText
        android:id="@+id/caja_nombre_consultas"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/caja_nombre"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_id_consultas" />

    <EditText
        android:id="@+id/caja_apellido_consultas"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/caja_apellido"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_nombre_consultas" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_consultas"
        android:layout_width="389dp"
        android:layout_height="358dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_apellido_consultas"
        app:layout_constraintVertical_bias="0.636" />

</androidx.constraintlayout.widget.ConstraintLayout>